add style.css, connect to index.html

--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-      <title>My Personal Website</title>
+      <title>Wow Cody Rhodes is Back</title>
+      <link rel="stylesheet" href="./style.css" />
   </head>
 
   <body>
-      <h1>Hello World!</h1>
+      <h1>Adrenaline In My Soul <div id="american_nightmare"></div></h1> 
+      <img src="./photos/Cody-Rhodes-Smiling-in-AEW.webp" alt="Cody Rhodes smiling" title="The American Nightmare" /> 
+      <h1>Seth Rollins was defeated at Wrestlemania by Cody Rhodes</h1>
   </body>
 </html>
