--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
       <h1>Adrenaline In My Soul <div id="american_nightmare"></div></h1> 
       <img src="./photos/Cody-Rhodes-Smiling-in-AEW.webp" alt="Cody Rhodes smiling" title="The American Nightmare" /> 
       <h1>Seth Rollins was defeated at Wrestlemania by Cody Rhodes</h1>
+      <script src="script.js"></script> 
   </body>
 </html>
