modify css file, html file, reassure js file is up to date

--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
   </head>
 
   <body>
-      <h1>Adrenaline In My Soul <div id="american_nightmare"></div></h1> 
-      <img src="./photos/Cody-Rhodes-Smiling-in-AEW.webp" alt="Cody Rhodes smiling" title="The American Nightmare" /> 
+      <h1>Adrenaline In My Soul</h1> 
       <h1>Seth Rollins was defeated at Wrestlemania by Cody Rhodes</h1>
       <script src="script.js"></script> 
   </body>
